[gd_scene load_steps=7 format=3 uid="uid://cy7j5u7se7823"]

[ext_resource type="Script" uid="uid://b6wv050rt3hh5" path="res://scripts/working bench/working_bench.gd" id="1_pdxho"]
[ext_resource type="Script" uid="uid://cdp0ifrkk45gk" path="res://scripts/working bench/wire_manager.gd" id="2_lvf8t"]
[ext_resource type="Script" uid="uid://bba63tdhkgpeh" path="res://scripts/working bench/pin_manager.gd" id="3_1bg2q"]
[ext_resource type="Script" uid="uid://cpl5ekyj8xtjm" path="res://scripts/working bench/chips_manager.gd" id="3_a5pla"]
[ext_resource type="PackedScene" uid="uid://csc52ych6nj08" path="res://scenes/input/input_manager.tscn" id="6_gqfpb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcgij"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.41598, 0.41598, 0.41598, 1)

[node name="WorkingBench" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_kcgij")
script = ExtResource("1_pdxho")
input_pin_count = 0
output_pin_count = 0

[node name="InputManager" parent="." instance=ExtResource("6_gqfpb")]

[node name="Wires" type="Node2D" parent="."]
script = ExtResource("2_lvf8t")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Inputs" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
script = ExtResource("3_1bg2q")

[node name="Chips" type="Control" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 30.0
script = ExtResource("3_a5pla")

[node name="Outputs" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("3_1bg2q")
type = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[connection signal="timeout" from="Timer" to="." method="sim_frame_ended"]
